--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,50 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: bisque;
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+/* Modal CSS */
+
+.delete-modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(128, 128, 128, 0.171);
+  display: grid;
+  place-items: center;
+  z-index: 1000;
+}
+
+.modal-inner{
+  background: white;
+  padding: 70px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+header h1{
+  font-family: 'Creepster', cursive;
+  letter-spacing: 3px;
+  color: black;
+  font-size: 36px;
+  
+}
+#cart{
+  background-color: rgba(56, 203, 219, 0.411);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+#cart h5{
+  text-shadow: 0 0 3px #FF0000;
+  font-family: sans-serif;
 }
